[gd_scene load_steps=11 format=3 uid="uid://cby1pdyhnx54d"]

[ext_resource type="Script" path="res://scenes/creatures/creature.gd" id="1_knja8"]
[ext_resource type="Texture2D" uid="uid://db5vhso41ajgc" path="res://assets/square.png" id="2_1bp72"]
[ext_resource type="Texture2D" uid="uid://bdsa5e4ykawgt" path="res://assets/spritesheet_complet.png" id="2_25u6j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajva0"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_upcae"]
resource_name = "eyes_blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2v157"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y7e5w"]
resource_name = "smile"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_rqxfq"]
resource_name = "arms_move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_4m755"]
resource_name = "shroom"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.733333, 0.966667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7eoq"]
_data = {
"RESET": SubResource("Animation_2v157"),
"arms_move": SubResource("Animation_rqxfq"),
"eyes_blink": SubResource("Animation_upcae"),
"shroom": SubResource("Animation_4m755"),
"smile": SubResource("Animation_y7e5w")
}

[node name="creature_root" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_knja8")
_max_life = 5

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(64, 64)
scale = Vector2(4, 4)
texture = ExtResource("2_25u6j")
hframes = 19

[node name="colors" type="Node2D" parent="."]

[node name="red" type="Node2D" parent="colors"]
position = Vector2(-2.15, 0)

[node name="background" type="Sprite2D" parent="colors/red"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("2_1bp72")

[node name="color" type="Sprite2D" parent="colors/red"]
modulate = Color(1, 0, 0, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("2_1bp72")
centered = false

[node name="green" type="Node2D" parent="colors"]
position = Vector2(39.98, 0)

[node name="background" type="Sprite2D" parent="colors/green"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("2_1bp72")

[node name="color" type="Sprite2D" parent="colors/green"]
modulate = Color(0, 1, 0.0600204, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("2_1bp72")
centered = false

[node name="blue" type="Node2D" parent="colors"]
position = Vector2(82.585, 0)

[node name="background" type="Sprite2D" parent="colors/blue"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("2_1bp72")

[node name="color" type="Sprite2D" parent="colors/blue"]
modulate = Color(0, 0.146028, 1, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("2_1bp72")
centered = false

[node name="area" type="Area2D" parent="." groups=["creature"]]

[node name="collision" type="CollisionShape2D" parent="area"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_ajva0")

[node name="line" type="Line2D" parent="."]

[node name="label" type="Label" parent="."]
offset_top = 126.0
offset_right = 128.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w7eoq")
}

[node name="timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="input_event" from="area" to="." method="_on_area_input_event"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
